tests/machine/x/kotlin/if_then_else.kt
val x = 12

val msg = if (toBool(x > 10)) "yes" else "no"

fun main() {
    println(msg)
}
